fix: styling scroll to top button &  footer height
changes the colors of the scroll to top button to beige and the icon to black, adjusts the height of the footer for no overlapping with the scroll to top button

--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,7 @@ footer{
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    padding: 30px;
+    padding: 30px 30px 60px 30px;
     width: 100%;
     & .btn-con{
         display: flex;
@@ -1111,10 +1111,10 @@ footer{
     z-index: 99;
     padding: 1em 2em 1em 2em;
     border-radius: var(--border-radius-main-con);
-    border-style: solid;
+    border-style: none;
     border-color: var(--browngrey);
     border-width: 2px;
-    background-color: var(--browngrey);
+    background-color: var(--tanly);
     text-decoration: none;
     color: var(--browngrey);
     font-family: "Inter"; sans-serif; 
